--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "frontend": "cd frontend && npm start",
     "backend": "cd backend && npm start",
-    "start": "concurrently \"npm run frontend\" \"npm run backend\""
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.6.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "kill-port": "^2.0.1"
+    "concurrently": "^7.6.0"
   }
 }
