--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 node_modules
+
+package.json
+frontend/package.json
+backend/package.json
+
+package-lock.json
+frontend/package-lock.json
+backend/package-lock.json
