--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.6.0"
+    "bcrypt": "^5.1.0",
+    "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "joi": "^17.8.3",
+    "joi-password-complexity": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "react-scroll": "^1.8.9"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
