--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "passport-jwt": "^4.0.1",
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
-    "react-tag-input": "^6.8.1"
+    "react-tag-input": "^6.8.1",
+    "socket.io-client": "^4.6.1"
   },
   "resolutions": {
     "styled-components": "^5"
