--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.8.3",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "react-icons": "^4.8.0",
