--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^4.8.0",
     "react-scroll": "^1.8.9",
     "react-tag-input": "^6.8.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "timeago.js": "^4.0.2"
   },
   "resolutions": {
     "styled-components": "^5"
